--- a/passwords/README
+++ b/passwords/README
@@ -1,7 +1,10 @@
-Fichiers de mot de passe
-format:
+Ici sont stocké les fichies de mot de passe
+Le format de ces fichiers consiste en 2 lignes:
 pseudo
 password
 
 
-Fichiers (noms): leekwars, manawyrd
+Noms de fichiers utilisés par les scripts:
+leekwars, manawyrd
+
+Voir le fichier "example_website_name" pour un example
